registerQuestionで、開発環境の場合はdockerコンテナにリクエストする
post/put/patchのとき、bodyを { body: { body } }の形に変換する

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - ./amplify/backend/function/question/src/:/var/task
     environment:
       <<: *constants
-      TABLE_NAME: "questions"
+      TABLE_NAME: "words"
     command: "index.handler"
     networks:
       - lambda-network
